--- a/style.css
+++ b/style.css
@@ -1,37 +1,37 @@
 body {
-    margin: 0;
     display: flex;
-    font-family: sans-serif;
-    flex-direction: column;
     flex: 1;
+    flex-direction: column;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0; 
 }
 
 button {
+    flex-shrink: 0;
+    color: #eee;
     background-color: #3882F6;
     padding: 8px 16px;
-    flex-shrink: 0;
     height: 36px;
-    width: 140px;
-    color: #eee;
-    border-radius: 8px;
+    width: 128px;
     font-weight: bold;
     font-size: 18px;
     padding: 5px;
     border: 10px;
     border-color: #eee;
+    border-radius: 8px;
 }
 
 .header {
     display: flex;
     flex-direction: column;
-    padding: 0px 250px;
     align-content: space-between;
+    padding: 0px 250px;
 }
 
-.header-text, 
-.links {
-    font-size: 18px;
-    color: #E5E7EB;
+.header,
+.footer {
+    color: #F9FAF8;
+    background-color: #1F2937;
 }
 
 .header-one {
@@ -42,22 +42,26 @@ button {
 }
 
 .header-logo {
-    margin-top: 16px;
-    font-size: 24px;
     flex-shrink: 0;
+    font-size: 24px;
+    margin-top: 16px;
 }
 
 .links {
     display: flex;
-    margin-top: 16px;
     flex-shrink: 0;
     justify-content: flex-end;
+    color: #E5E7EB;
+    font-size: 18px;
+    margin-top: 16px;
 }
 
 ul {
     list-style-type: none;
     font-size: 18px;
     gap: 16px;
+    margin: 0px;
+    padding: 0px;
 }
 
 a {
@@ -67,17 +71,17 @@ a {
 
 .header-two {
     display: flex;
-    padding-top: 120px;
-    padding-bottom: 120px;
     justify-content: space-between;
     align-items: center;
+    padding: 110px 0px;
+    gap: 38px;
 }
 
 .description {
     display: flex;
+    flex-shrink: 0;
     flex-direction: column;
     width: 480px;
-    flex-shrink: 0;
 }
 
 .header-bold {
@@ -86,9 +90,10 @@ a {
 }
 
 .header-text {
-    margin: 10px 0px;
     color: #E5E7EB;
+    font-size: 18px;
     width: 450px;
+    margin: 10px 0px;
 }
 
 .button1{
@@ -96,44 +101,37 @@ a {
 }
 
 .placeholder {
-    height: 200px;
-    width: 480px;
-    background-color: #6d747d;
-    color: #eee;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 38px;
-}
-
-.header,
-.footer {
-    color: #F9FAF8;
-    background-color: #1F2937;
+    height: 200px;
+    width: 480px;
+    color: #eee;
+    background-color: #6d747d;
+    
 }
 
 .content {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    background-color: #eee;
+    align-items: center;
 }
 
 .info {
+    color: #1F2937;
     font-size: 36px;
     font-weight: bolder;
-    color: #1F2937;
-    margin: 40px 0px;
-    padding: 0px 250px;
+    margin: 46px 0px;
 }
 
 .container {
   display: flex;
   justify-content: center;
   text-align: center;
-  background-color: #eee;
-  margin-bottom: 50px; 
+  color: #eee;
+  margin-bottom: 92px; 
+  gap: 16px;
 }
 
 .pic {
@@ -141,57 +139,60 @@ a {
 }
 
 .image {
-    background: #eee;
+    color: #eee;
     border: 4px solid #3882F6;
     border-radius: 12px;
     width: 152px;
     height: 152px;
-    margin-bottom: 10px;
+    margin-bottom: 12px;
 }
 
 .image-text {
-    width: 154px;
-    font-size: 16px;
-    text-align: center;
+    width: 160px;
+    color: #6d747d;
+    font-size: 18px;
+    text-align: center;  
 }
 
 .quote-section {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     background-color: #E5E7EB;
-    justify-content: space-between;
-    padding: 120px 330px;
-    margin: 50px 0px;
+    padding: 120px 340px;
+    margin-bottom: 92px;
 }
 
 .quote-text {
+    color: #1F2937;
     font-size: 36px;
     font-weight:lighter;
     font-style: italic;
-    color: #1F2937;
+    height: 160px;
 }
 
 .quote-author {
-    color: black;
-    font-size: 24px;
-    font-weight: bold;
     display: flex;
     justify-content: flex-end;
+    color: #000000;
+    font-size: 24px;
+    font-weight: bold;
+    text-align: left;
+    margin-right: 46px;
 }
 
 .call {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: #eee;
     background-color: #3882F6;
     padding: 20px;
     border-radius: 8px;
     width: 1000px;
-    height: 90px;
-    margin: 70px 0px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: #eee
+    height: 100px;
+    margin-bottom: 92px;
 }
-
 
 .call-header {
     font-size: 20px;
