Change Info container CSS structure

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ button {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    gap: 400px;
+    gap: 30px;
 }
 
 .header-logo {
@@ -74,7 +74,6 @@ a {
     justify-content: space-between;
     align-items: center;
     padding: 110px 0px;
-    gap: 38px;
 }
 
 .description {
@@ -108,7 +107,6 @@ a {
     width: 480px;
     color: #eee;
     background-color: #6d747d;
-    
 }
 
 .content {
@@ -131,11 +129,14 @@ a {
   text-align: center;
   color: #eee;
   margin-bottom: 92px; 
-  gap: 16px;
+  /* gap: 16px; */
 }
 
 .pic {
-    width: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .image {
@@ -144,7 +145,7 @@ a {
     border-radius: 12px;
     width: 152px;
     height: 152px;
-    margin-bottom: 12px;
+    margin: 10px 20px;
 }
 
 .image-text {
@@ -157,23 +158,30 @@ a {
 .quote-section {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     background-color: #E5E7EB;
     padding: 120px 340px;
     margin-bottom: 92px;
+    gap: 20px;
 }
 
 .quote-text {
+    /* display: flex;
+    justify-content: center;
+    flex-shrink: 1; */
     color: #1F2937;
     font-size: 36px;
     font-weight:lighter;
     font-style: italic;
     height: 160px;
+    width: 736px;
+    
+
 }
 
 .quote-author {
     display: flex;
     justify-content: flex-end;
+    align-items: flex-end;
     color: #000000;
     font-size: 24px;
     font-weight: bold;
