--- a/style.css
+++ b/style.css
@@ -1,210 +1,206 @@
 body {
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 0; 
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin: 0;
 }
 
 button {
-    flex-shrink: 0;
-    color: #eee;
-    background-color: #3882F6;
-    padding: 8px 16px;
-    height: 36px;
-    width: 128px;
-    font-weight: bold;
-    font-size: 18px;
-    padding: 5px;
-    border: 10px;
-    border-color: #eee;
-    border-radius: 8px;
+  flex-shrink: 0;
+  color: #ffffff;
+  background-color: #3882f6;
+  padding: 8px 16px;
+  height: 36px;
+  width: 128px;
+  font-weight: bold;
+  font-size: 18px;
+  padding: 5px;
+  border: 10px;
+  border-color: #ffffff;
+  border-radius: 8px;
 }
 
 .header {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    padding: 0px 250px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  padding: 0 250px;
 }
 
 .header,
 .footer {
-    color: #F9FAF8;
-    background-color: #1F2937;
+  color: #f9faf8;
+  background-color: #1f2937;
 }
 
 .header-one {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+  display: flex;
+  justify-content: space-between;
 }
 
 .header-logo {
-    flex-shrink: 0;
-    font-size: 24px;
-    margin-top: 16px;
+  flex-shrink: 0;
+  font-size: 24px;
+  margin-top: 16px;
 }
 
 .links {
-    display: flex;
-    flex-shrink: 0;
-    justify-content: flex-end; 
-    font-size: 18px;
-    margin-top: 16px;
-    margin-left: 30px;
-}
-
-ul {
-    list-style-type: none;
-    font-size: 18px;
-    gap: 16px;
-    margin: 0px;
-    padding: 0px;
+  display: flex;
+  flex-shrink: 0;
+  justify-content: flex-end;
+  font-size: 18px;
+  margin: 16px 0 0 30px;
+  list-style-type: none;
+  gap: 16px;
+  padding: 0px;
 }
 
 a {
-    text-decoration: none;
-    color: #E5E7EB;
+  text-decoration: none;
+  color: #e5e7eb;
 }
 
 .header-two {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 110px 0px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 110px 0px;
+  width: 100%;
 }
 
 .description {
-    display: flex;
-    flex-shrink: 0;
-    flex-direction: column;
-    width: 480px;
+  display: flex;
+  flex-shrink: 0;
+  flex-direction: column;
+  width: 480px;
 }
 
 .header-bold {
-    font-size: 48px;
-    font-weight: extra-bold;
+  font-size: 48px;
+  font-weight: extra-bold;
 }
 
 .header-text {
-    color: #E5E7EB;
-    font-size: 18px;
-    width: 450px;
-    margin: 10px 0px;
+  color: #e5e7eb;
+  font-size: 18px;
+  width: 450px;
+  margin: 10px 0px;
 }
 
-.button1{
-    border: none;
+.button1 {
+  border: none;
 }
 
 .placeholder {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 200px;
-    width: 480px;
-    color: #eee;
-    background-color: #6d747d;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  width: 480px;
+  color: #ffffff;
+  background-color: #6d747d;
 }
 
 .content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .info {
-    color: #1F2937;
-    font-size: 36px;
-    font-weight: bolder;
-    margin: 46px 0px;
+  color: #1f2937;
+  font-size: 36px;
+  font-weight: bolder;
+  margin: 46px 0px;
 }
 
 .container {
   display: flex;
   justify-content: center;
   text-align: center;
-  color: #eee;
-  margin-bottom: 92px; 
+  color: #ffffff;
+  margin-bottom: 92px;
 }
 
 .pic {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .image {
-    color: #eee;
-    border: 4px solid #3882F6;
-    border-radius: 12px;
-    width: 152px;
-    height: 152px;
-    margin: 10px 20px;
+  color: #ffffff;
+  border: 4px solid #3882f6;
+  border-radius: 12px;
+  width: 152px;
+  height: 152px;
+  margin: 10px 20px;
 }
 
 .image-text {
-    width: 160px;
-    color: #6d747d;
-    font-size: 18px;
-    text-align: center;  
+  width: 160px;
+  color: #6d747d;
+  font-size: 18px;
+  text-align: center;
 }
 
 .quote-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #E5E7EB;
-    padding: 120px 340px;
-    margin-bottom: 92px;
-    gap: 20px;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #e5e7eb;
+  padding: 120px 340px;
+  margin-bottom: 92px;
+  gap: 20px;
+  width: 100%;
 }
 
 .quote-text {
-    color: #1F2937;
-    font-size: 36px;
-    font-weight:lighter;
-    font-style: italic;
-    height: 160px;
-    width: 736px;
+  color: #1f2937;
+  font-size: 36px;
+  font-weight: lighter;
+  font-style: italic;
+  height: 160px;
+  width: 736px;
 }
 
 .quote-author {
-    color: #000000;
-    font-size: 24px;
-    font-weight: bold;
+  color: #000000;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 .call {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: #eee;
-    background-color: #3882F6;
-    padding: 20px;
-    border-radius: 8px;
-    width: 1000px;
-    height: 100px;
-    margin-bottom: 92px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: #ffffff;
+  background-color: #3882f6;
+  padding: 20px;
+  border-radius: 8px;
+  width: 1000px;
+  height: 100px;
+  margin-bottom: 92px;
 }
 
 .call-header {
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 4px;
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 4px;
 }
 
 .button2 {
-    border: 2px solid #ddd;
+  border: 2px solid #ddd;
 }
 
 .footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
 }
