--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ button {
   background-color: #1f2937;
 }
 
-.header-one {
+.header-top {
   display: flex;
   justify-content: space-between;
 }
@@ -63,7 +63,7 @@ a {
   color: #e5e7eb;
 }
 
-.header-two {
+.header-bottom {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -133,6 +133,10 @@ a {
   align-items: center;
 }
 
+.img {
+  overflow: hidden;
+}
+
 .image {
   color: #ffffff;
   border: 4px solid #3882f6;
@@ -150,14 +154,17 @@ a {
 }
 
 .quote-section {
+  background-color: #e5e7eb;
+  padding: 120px 0;
+  width: 100%;
+  margin-bottom: 92px;
+}
+
+.quote {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #e5e7eb;
-  padding: 120px 340px;
-  margin-bottom: 92px;
   gap: 20px;
-  width: 100%;
 }
 
 .quote-text {
@@ -173,6 +180,7 @@ a {
   color: #000000;
   font-size: 24px;
   font-weight: bold;
+  margin-left: 420px;
 }
 
 .call {
