--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ button {
   flex-direction: column;
   align-content: center;
   justify-content: center;
-  padding: 0 250px;
+  padding: 0 160px;
 }
 
 .header,
@@ -96,12 +96,7 @@ a {
 
 .placeholder {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 200px;
-  width: 480px;
-  color: #ffffff;
-  background-color: #6d747d;
+  height: 240px;
 }
 
 .content {
@@ -133,10 +128,6 @@ a {
   align-items: center;
 }
 
-.img {
-  overflow: hidden;
-}
-
 .image {
   color: #ffffff;
   border: 4px solid #3882f6;
@@ -154,8 +145,10 @@ a {
 }
 
 .quote-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: #e5e7eb;
-  padding: 120px 0;
   width: 100%;
   margin-bottom: 92px;
 }
@@ -163,8 +156,8 @@ a {
 .quote {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 20px;
+  height: 160px;
+  padding: 120px 220px;
 }
 
 .quote-text {
@@ -172,15 +165,14 @@ a {
   font-size: 36px;
   font-weight: lighter;
   font-style: italic;
-  height: 160px;
   width: 736px;
 }
 
 .quote-author {
+  align-self: flex-end;
   color: #000000;
   font-size: 24px;
   font-weight: bold;
-  margin-left: 420px;
 }
 
 .call {
